# Typing-Game

./: README.md  requirements.txt  setup.cfg
data/words/: words_frequency.txt
src/: main.py
src/config/: game_config.py  theme_config.py
src/game/: game_app.py  game_modifier.py  game_score.py  game_screen.py  game_state.py  game_stats.py
src/game/components/: board.py  letter.py  level.py  text.py  word.py
src/gui/: button_gui.py  game_over_gui.py  gui_component.py  gui_manager.py  gui_vars.py  level_gui.py  lives_gui.py  score_gui.py  stats_gui.py  top_score_gui.py
src/gui/pages/: game_page.py  menu_page.py  page.py  page_manager.py  score_page.py
src/utils/: accumulator.py  callback_vars.py  fonts.py  sound_manager.py  themes.py  window.py  word_data_manager.py
