[metadata]
name = Typing-Game
description = typing game implemented using pygame
author = Nicolas Parucker
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    config
    game
    game.components
    utils
    gui
    gui.pages
install_requires =
pygame==2.5.0

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
config = py.typed
game = py.typed
game.components = py.typed
utils = py.typed
gui = py.typed
gui.pages = ty.typed

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
